-Changed db to accomodate fixes -Fixed orderView name and phonenumber not showing ones used in checkout -Added shipping first and last name to confirmation email

--- a/stylesheets/searchresults.css
+++ b/stylesheets/searchresults.css
@@ -37,7 +37,7 @@ html {
   font-weight: bold;
   text-decoration: none;
   float: left;
-  width: 9em;
+  width: 12em;
   color: black;
   text-align: center;
 }
